--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud-de-dados-react-jor",
+  "name": "jogo-da-velha-ajj",
   "private": true,
   "version": "0.0.0",
   "type": "module",
